--- a/src/Components/Photo/PhotoComments.module.css
+++ b/src/Components/Photo/PhotoComments.module.css
@@ -2,9 +2,14 @@
     overflow-y: auto;
     word-break: break-word;
     padding: 0 2rem;
-}
-
-.comments li {
-    margin-bottom: .5rem;
+  }
+  
+  .single.comments {
+    padding: 0px;
+  }
+  
+  .comments li {
+    margin-bottom: 0.5rem;
     line-height: 1.2;
-}
+  }
+  
