--- a/src/Components/Photo/PhotoCommentsForm.module.css
+++ b/src/Components/Photo/PhotoCommentsForm.module.css
@@ -3,31 +3,34 @@
     grid-template-columns: 1fr auto;
     align-items: stretch;
     margin: 1rem;
-}
-
-.textarea {
+  }
+  
+  .single.form {
+    margin: 1rem 0;
+  }
+  
+  .textarea {
     display: block;
     width: 100%;
     font-size: 1rem;
     font-family: var(--type-first);
     resize: none;
     border: 1px solid #eee;
-    padding: 1.5rem;
-    border-radius: 1.2rem;
+    padding: 0.5rem;
+    border-radius: 0.2rem;
     background: #eee;
-    transition: .2s;
-}
-
-.textarea:focus,
-.textarea:hover {
+    transition: 0.2s;
+  }
+  
+  .textarea:focus,
+  .textarea:hover {
     outline: none;
     border-color: #fb1;
     background: white;
     box-shadow: 0 0 0 3px #fea;
-}
-
-
-.button {
+  }
+  
+  .button {
     border: none;
     cursor: pointer;
     color: #333;
@@ -35,29 +38,30 @@
     font-size: 1rem;
     padding: 0 1rem;
     overflow: hidden;
-}
-
-.button:focus,
-.button:hover {
+  }
+  
+  .button:focus,
+  .button:hover {
     outline: none;
-}
-
-.button:focus svg path,
-.button:hover svg path {
+  }
+  
+  .button:focus svg path,
+  .button:hover svg path {
     fill: #fea;
     stroke: #fb1;
-}
-
-.button:focus svg g,
-.button:hover svg g {
-    animation: latir .6s infinite;
-}
-
-@keyframes latir {
+  }
+  
+  .button:focus svg g,
+  .button:hover svg g {
+    animation: latir 0.6s infinite;
+  }
+  
+  @keyframes latir {
     from {
-        opacity: 0;
+      opacity: 0;
     }
     to {
-        opacity: 1;
+      opacity: 1;
     }
-}
+  }
+  
