--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@
     color: #333
   }
   
+
   .container {
     max-width: 50rem;
     padding: 0 1rem;
@@ -82,4 +83,14 @@
         opacity: 1;
         transform: initial;
     }
+}
+
+.App {
+ display: flex; 
+ flex-direction: column;
+ min-height: calc(100vh + 10rem);
+}
+
+.AppBody {
+  flex: 1;
 }
